force-app/main/default/objects/EML_Table_Sesame__c/EML_Table_Sesame__c.object-meta.xml
<CustomObject>
    <label>Table Sésame</label>
    <nameField>
        <displayFormat>Sesame-{0000}</displayFormat>
        <label>Nom de Table Sésame</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables Sésame</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>