force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Campus__c.field-meta.xml
<CustomField>
    <fullName>EML_Campus__c</fullName>
    <label>Campus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>