force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Date_RDV__c.field-meta.xml
<CustomField>
    <fullName>EML_Date_RDV__c</fullName>
    <label>Date RDV</label>
    <type>Date</type>
</CustomField>