force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_DDN__c.field-meta.xml
<CustomField>
    <fullName>EML_DDN__c</fullName>
    <label>DDN</label>
    <type>Date</type>
</CustomField>