force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Ecole__c.field-meta.xml
<CustomField>
    <fullName>EML_Ecole__c</fullName>
    <label>Ecole</label>
    <length>100</length>
    <type>Text</type>
</CustomField>