force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Email__c.field-meta.xml
<CustomField>
    <fullName>EML_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>