force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_EpreuveOrale__c.field-meta.xml
<CustomField>
    <fullName>EML_EpreuveOrale__c</fullName>
    <label>EpreuveOrale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>