force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_LVA__c.field-meta.xml
<CustomField>
    <fullName>EML_LVA__c</fullName>
    <label>LVA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>