force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_LVB__c.field-meta.xml
<CustomField>
    <fullName>EML_LVB__c</fullName>
    <label>LVB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>