force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Nom__c.field-meta.xml
<CustomField>
    <fullName>EML_Nom__c</fullName>
    <label>Nom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>