force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_NumeroINE__c.field-meta.xml
<CustomField>
    <fullName>EML_NumeroINE__c</fullName>
    <label>NumeroINE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>