force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_NumeroPS__c.field-meta.xml
<CustomField>
    <fullName>EML_NumeroPS__c</fullName>
    <label>NumeroPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>