force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_NumeroSesame__c.field-meta.xml
<CustomField>
    <fullName>EML_NumeroSesame__c</fullName>
    <label>NumeroSesame</label>
    <length>20</length>
    <type>Text</type>
</CustomField>