force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Portable__c.field-meta.xml
<CustomField>
    <fullName>EML_Portable__c</fullName>
    <label>Portable</label>
    <type>Phone</type>
</CustomField>