force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_Prenom__c.field-meta.xml
<CustomField>
    <fullName>EML_Prenom__c</fullName>
    <label>Prenom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>