force-app/main/default/objects/EML_Table_Sesame__c/fields/EML_TrancheHoraire__c.field-meta.xml
<CustomField>
    <fullName>EML_TrancheHoraire__c</fullName>
    <label>TrancheHoraire</label>
    <length>100</length>
    <type>Text</type>
</CustomField>