force-app/main/default/objects/EML_Table_Sesame__c/fields/Error_during_import__c.field-meta.xml
<CustomField>
    <fullName>Error_during_import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error during import</label>
    <type>Checkbox</type>
</CustomField>