force-app/main/default/objects/EML_Table_Sesame__c/fields/SIS_Contact__c.field-meta.xml
<CustomField>
    <fullName>SIS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tables Sésame</relationshipLabel>
    <relationshipName>Tables_Sesame</relationshipName>
    <type>Lookup</type>
</CustomField>