force-app/main/default/objects/EML_Table_Sesame__c/fields/SIS_Error_description__c.field-meta.xml
<CustomField>
    <fullName>SIS_Error_description__c</fullName>
    <label>Error description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>