force-app/main/default/objects/EML_Table_Sesame__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EML_Nom__c</columns>
    <columns>EML_Prenom__c</columns>
    <columns>EML_NumeroINE__c</columns>
    <columns>EML_Campus__c</columns>
    <columns>EML_Email__c</columns>
    <columns>EML_Ecole__c</columns>
    <columns>SIS_Error_description__c</columns>
    <columns>Error_during_import__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>