force-app/main/default/objects/EML_Table_Sesame__c/listViews/Erreurs_d_importation.listView-meta.xml
<ListView>
    <fullName>Erreurs_d_importation</fullName>
    <columns>NAME</columns>
    <columns>EML_Nom__c</columns>
    <columns>EML_Prenom__c</columns>
    <columns>Error_during_import__c</columns>
    <columns>SIS_Error_description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_during_import__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Erreurs d&apos;importation</label>
</ListView>