force-app/main/default/objects/EML_Table_Sesame__c/listViews/Import_SESAME_ok.listView-meta.xml
<ListView>
    <fullName>Import_SESAME_ok</fullName>
    <columns>NAME</columns>
    <columns>EML_Nom__c</columns>
    <columns>EML_Prenom__c</columns>
    <columns>EML_Email__c</columns>
    <columns>EML_Ecole__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_during_import__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>EML_Email__c</field>
        <operation>notEqual</operation>
        <value>anonymous@em-lyon.com</value>
    </filters>
    <label>Dossiers SESAME importés avec succès</label>
</ListView>